refactor: Replaces add server limit from config map with hub.activeServerLimit (#169)

--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -30,6 +30,8 @@ jupyterhub:
   # JupyterHub's application settings
   # ref: https://github.com/jupyterhub/zero-to-jupyterhub-k8s/blob/master/jupyterhub/values.yaml
   hub:
+    # Maximum number of concurrent servers that can be active at a time. 0 means that no limit is enforced
+    activeServerLimit: 0
     # Jupyterhub resources regarding requests for CPU and memory
     resources:
       requests:
@@ -157,18 +159,11 @@ jupyterhub:
           configMapKeyRef:
             name: hub-illumidesk-cm           # The ConfigMap this value comes from.
             key: POSTGRES_JUPYTERHUB_DB
-      ACTIVE_SERVER_LIMIT:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: ACTIVE_SERVER_LIMIT
       LTI13_PRIVATE_KEY: "/srv/jupyterhub/rsa_private.key"
       # Mount Root
       ILLUMIDESK_MNT_ROOT: "/illumidesk-courses"
     extraConfig:
-      serverLimitConfig:
-        c.JupyterHub.active_server_limit = int(os.environ.get('ACTIVE_SERVER_LIMIT'))
-      # The logo that appears on the top right of the control panel and end-user notebooks with Jupyter Classic.
+      # The logo that appears on the top right of the control panel and end-user notebook'))s with Jupyter Classic.
       logoConfig: |
         c.JupyterHub.logo_file = "/srv/jupyterhub/illumidesk-80.png"
 
@@ -421,8 +416,6 @@ allowLocal:
 illumideskSettings:
   # Enables or disables the illumidesk settings options
   enabled: true
-  # active user limit
-  active_server_limit: "0"
   # The custom authentication type. Should be one of DUMMY, LTI11, LTI13, or AUTH0.
   customAuthType: "DUMMY"
   # OIDC authorization URL
