--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -30,6 +30,29 @@ jupyterhub:
   # JupyterHub's application settings
   # ref: https://github.com/jupyterhub/zero-to-jupyterhub-k8s/blob/master/jupyterhub/values.yaml
   hub:
+    # clone custom JupyterHub templates into a volume
+    initContainers:
+      - name: "git-clone-templates"
+        image: "alpine/git"
+        args:
+          - clone
+          - --single-branch
+          - --branch=main
+          - --depth=1
+          - --
+          - https://github.com/illumidesk/jhubui.git
+          - /etc/jupyterhub/custom
+        securityContext:
+          runAsUser: 0
+        volumeMounts:
+          - name: custom-templates
+            mountPath: "/etc/jupyterhub/custom"
+    extraVolumes:
+      - name: custom-templates
+        emptyDir: {}
+    extraVolumeMounts:
+      - name: custom-templates
+        mountPath: "/etc/jupyterhub/custom"
     # Maximum number of concurrent servers that can be active at a time. 0 means that no limit is enforced
     activeServerLimit: 0
     # Jupyterhub resources regarding requests for CPU and memory
