refactor: Update init image to use one hosted in IllumiDesk DockerHub account (#171)

--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -33,7 +33,7 @@ jupyterhub:
     # clone custom JupyterHub templates into a volume
     initContainers:
       - name: "git-clone-templates"
-        image: "alpine/git"
+        image: "illumidesk/alpine-git:1.0.30"
         args:
           - clone
           - --single-branch
