--- a/charts/illumidesk/Chart.yaml
+++ b/charts/illumidesk/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: illumidesk
-version: 5.9.8
+version: 5.10.0
 appVersion: 1.2.0
 description: An extention of the JupyterHub Chart with additional IllumiDesk resources
 icon: https://configs.illumidesk.com/images/illumidesk-80.png
@@ -15,6 +15,9 @@ dependencies:
     version: "10.1.3"
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
+  - name: argo-events
+    version: "1.8.0"
+    repository: https://argoproj.github.io/argo-helm
 maintainers:
   - name: IllumiDesk Team
     email: hello@illumidesk.com
