--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -30,51 +30,10 @@ jupyterhub:
   # JupyterHub's application settings
   # ref: https://github.com/jupyterhub/zero-to-jupyterhub-k8s/blob/master/jupyterhub/values.yaml
   hub:
-    # clone custom JupyterHub templates into a volume
-    initContainers:
-      - name: "git-clone-templates"
-        image: "illumidesk/alpine-git:1.0.30"
-        args:
-          - clone
-          - --single-branch
-          - --branch=main
-          - --depth=1
-          - --
-          - https://github.com/illumidesk/jhubui.git
-          - /etc/jupyterhub/custom
-        securityContext:
-          runAsUser: 0
-        volumeMounts:
-          - name: custom-templates
-            mountPath: "/etc/jupyterhub/custom"
-    extraVolumes:
-      - name: custom-templates
-        emptyDir: {}
-    extraVolumeMounts:
-      - name: custom-templates
-        mountPath: "/etc/jupyterhub/custom"
-    # Maximum number of concurrent servers that can be active at a time. 0 means that no limit is enforced
-    activeServerLimit: 0
-    # Jupyterhub resources regarding requests for CPU and memory
-    resources:
-      requests:
-        # CPU that is allocated to the hub
-        cpu: "200m"
-        # memory that is allocated to the hub
-        memory: "400Mi"
-      limits:
-        # Max CPU that is allocated to the hub
-        cpu: "400m"
-        # Max memory that is allocated to the hub
-        memory: "800Mi"
-    config:
-    # JupyterHub's database configuration. Defaults to "postgres" since other options, such as "sqlite-pvc",
-    # require additional PVC configuration settings.
-    # ref: https://zero-to-jupyterhub.readthedocs.io/en/stable/resources/reference.html#hub-db
-    db:
+
       # Database type
       # ref: https://zero-to-jupyterhub.readthedocs.io/en/stable/resources/reference.html#hub-db-type
-      type: postgres
+    #  type: postgres
     # Extra configuration options
     # ref: https://zero-to-jupyterhub.readthedocs.io/en/stable/resources/reference.html#hub-extraconfig
     extraEnv:
@@ -152,36 +111,6 @@ jupyterhub:
           configMapKeyRef:
             name: hub-illumidesk-cm           # The ConfigMap this value comes from.
             key: LTI13_TOKEN_URL
-      POSTGRES_NBGRADER_USER:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: POSTGRES_NBGRADER_USER
-      POSTGRES_NBGRADER_HOST:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: POSTGRES_NBGRADER_HOST
-      POSTGRES_JUPYTERHUB_HOST:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: POSTGRES_JUPYTERHUB_HOST
-      POSTGRES_JUPYTERHUB_USER:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: POSTGRES_JUPYTERHUB_USER
-      POSTGRES_JUPYTERHUB_PORT:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: POSTGRES_JUPYTERHUB_PORT
-      POSTGRES_JUPYTERHUB_DB:
-        valueFrom:
-          configMapKeyRef:
-            name: hub-illumidesk-cm           # The ConfigMap this value comes from.
-            key: POSTGRES_JUPYTERHUB_DB
       LTI13_PRIVATE_KEY: "/srv/jupyterhub/rsa_private.key"
       # Mount Root
       ILLUMIDESK_MNT_ROOT: "/illumidesk-courses"
@@ -266,16 +195,6 @@ jupyterhub:
 
         c.Authenticator.enable_auth_state = True
 
-        c.JupyterHub.db_url = 'postgresql://{user}:{password}@{host}:{port}/{db}'.format(
-          user=os.environ.get('POSTGRES_JUPYTERHUB_USER'),
-          password=os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'),
-          host=os.environ.get('POSTGRES_JUPYTERHUB_HOST'),
-          port=os.environ.get('POSTGRES_JUPYTERHUB_PORT'),
-          db=os.environ.get('POSTGRES_JUPYTERHUB_DB'),
-        )
-        # Upgrade the database automatically on start
-        c.JupyterHub.upgrade_db = True
-
       illumideskSecurity: |
         c.JupyterHub.tornado_settings = {
           "headers": {"Content-Security-Policy": "frame-ancestors 'self' *"},
@@ -336,6 +255,7 @@ jupyterhub:
       type: ClusterIP
   # Single user server
   singleuser:
+
     # Default CPU Limits and Gurantees
     cpu:
       # Max CPU that can be allocated
@@ -350,6 +270,8 @@ jupyterhub:
     # Single user server extra environment variables
     # ref: https://zero-to-jupyterhub.readthedocs.io/en/stable/resources/reference.html#singleuser-extraenv
     extraEnv:
+      # disables argo workflow in single user notebook
+      ARGO_ENABLED: "false"
       # If yes, Instructs the startup script to change the $NB_USER home directory owner and group to the
       # current value of $NB_UID and $NB_GID.
       CHOWN_HOME: 'yes'
@@ -440,7 +362,7 @@ allowLocal:
 ##
 illumideskSettings:
   # Enables or disables the illumidesk settings options
-  enabled: true
+  enabled: false
   # The custom authentication type. Should be one of DUMMY, LTI11, LTI13, or AUTH0.
   customAuthType: "DUMMY"
   # OIDC authorization URL
@@ -510,20 +432,24 @@ graderSetupService:
   graderSpawnerStorage: "2Gi"
 
 
-## Argo events
-## ref: https://artifacthub.io/packages/helm/argo/argo-events
-##
-argo-events:
-  # Sets the namespace for the arg-events service. By default
-  # the namespace is fetched from the organization name env var.
-  namespace:
-    valueFrom:
-      configMapKeyRef:
-        name: hub-illumidesk-cm
-        key: ORGANIZATION_NAME
+argo:
+  enabled: false
+  natsService: cluster-resources-nats
+  natsNamespace: kube-system
+  ## Argo events
+  ## ref: https://artifacthub.io/packages/helm/argo/argo-events
+  ##
+  argo-events:
+    # Sets the namespace for the arg-events service. By default
+    # the namespace is fetched from the organization name env var.
+    namespace:
+      valueFrom:
+        configMapKeyRef:
+          name: hub-illumidesk-cm
+          key: ORGANIZATION_NAME
 
-## Auto-grading options
-##
-autograding:
-  # Sets the number of concurrent auto-graders.
-  concurrency: "1"
+  ## Auto-grading options
+  ##
+  autograding:
+    # Sets the number of concurrent auto-graders.
+    concurrency: "1"
