--- a/charts/illumidesk/templates/argo_amqp.yaml
+++ b/charts/illumidesk/templates/argo_amqp.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.argo.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -40,3 +41,4 @@ spec:
           resources:
             limits:
               cpu: 100m
+{{ end }}
