--- a/charts/illumidesk/templates/illumidesk_secrets.yaml
+++ b/charts/illumidesk/templates/illumidesk_secrets.yaml
@@ -10,6 +10,7 @@ stringData:
   postgresql-password:  {{ .Values.externalDatabase.databasePassword }}
 {{ else if .Values.postgresql.enabled }}
   postgresql-password: {{ .Values.postgresql.postgresqlPassword }}
+  postgresql-postgres-password: {{ .Values.postgresql.postgresqlPassword }}
 {{ end }}
 
 {{ end }}
