--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -224,6 +224,13 @@ jupyterhub:
           c.Spawner.auth_state_hook = userdata_hook
 
         c.Authenticator.enable_auth_state = True
+        c.JupyterHub.db_url = 'postgresql://{user}:{password}@{host}:{port}/{db}'.format(
+          user=os.environ.get('POSTGRES_JUPYTERHUB_USER'),
+          password=os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'),
+          host=os.environ.get('POSTGRES_JUPYTERHUB_HOST'),
+          port=os.environ.get('POSTGRES_JUPYTERHUB_PORT'),
+          db=os.environ.get('POSTGRES_JUPYTERHUB_DB'),
+        )
 
       illumideskSecurity: |
         c.JupyterHub.tornado_settings = {
