--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -225,7 +225,8 @@ jupyterhub:
           c.Spawner.auth_state_hook = userdata_hook
 
         c.Authenticator.enable_auth_state = True
-        nb_grader_password = urllib.parse.quote(POSTGRES_JUPYTERHUB_PASSWORD, safe="")
+
+        nb_grader_password = urllib.parse.quote(os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'), safe="")
         c.JupyterHub.db_url = 'postgresql://{user}:{password}@{host}:{port}/{db}'.format(
           user=os.environ.get('POSTGRES_JUPYTERHUB_USER'),
           password=nb_grader_password,
