--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -225,14 +225,14 @@ jupyterhub:
           c.Spawner.auth_state_hook = userdata_hook
 
         c.Authenticator.enable_auth_state = True
-
-        c.JupyterHub.db_url = urllib.parse.quote('postgresql://{user}:{password}@{host}:{port}/{db}'.format(
+        postgres_password = urllib.parse.quote(os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'))
+        c.JupyterHub.db_url = 'postgresql://{user}:{password}@{host}:{port}/{db}'.format(
           user=os.environ.get('POSTGRES_JUPYTERHUB_USER'),
-          password=os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'),
+          password=postgres_password,
           host=os.environ.get('POSTGRES_JUPYTERHUB_HOST'),
           port=os.environ.get('POSTGRES_JUPYTERHUB_PORT'),
           db=os.environ.get('POSTGRES_JUPYTERHUB_DB'),
-        ), safe='')
+        )
 
       illumideskSecurity: |
         c.JupyterHub.tornado_settings = {
