--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -225,10 +225,9 @@ jupyterhub:
           c.Spawner.auth_state_hook = userdata_hook
 
         c.Authenticator.enable_auth_state = True
-        postgres_password = urllib.parse.quote(os.getenv('POSTGRES_JUPYTERHUB_PASSWORD'), safe='')
         c.JupyterHub.db_url = 'postgresql://{user}:{password}@{host}:{port}/{db}'.format(
           user=os.environ.get('POSTGRES_JUPYTERHUB_USER'),
-          password=postgres_password,
+          password=os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'),
           host=os.environ.get('POSTGRES_JUPYTERHUB_HOST'),
           port=os.environ.get('POSTGRES_JUPYTERHUB_PORT'),
           db=os.environ.get('POSTGRES_JUPYTERHUB_DB'),
