--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -155,8 +155,6 @@ jupyterhub:
         from illumidesk.authenticators.authenticator import setup_course_hook
         from illumideskdummyauthenticator.authenticator import IllumiDeskDummyAuthenticator
         from oauthenticator.generic import GenericOAuthenticator
-        from illumidesk.authenticators.authenticator import setup_course_hook_lti11
-        import urllib.parse
 
         custom_auth_type = os.environ.get('CUSTOM_AUTH_TYPE')
         c.JupyterHub.hub_connect_ip = 'hub'
@@ -172,14 +170,11 @@ jupyterhub:
             ]
         elif custom_auth_type == 'LTI11':
           c.JupyterHub.authenticator_class = 'ltiauthenticator.LTIAuthenticator'
-          c.LTI11Authenticator.consumers = {
+          c.LTIAuthenticator.consumers = {
               os.environ.get('LTI_CONSUMER_KEY')
               or 'ild_test_consumer_key': os.environ.get('LTI_SHARED_SECRET')
               or 'ild_test_shared_secret'
           }
-          c.Authenticator.enable_auth_state = True
-          # Use an LTI 1.1 parameter to set the username.
-          c.LTI11Authenticator.username_key = "lis_person_contact_email_primary"
         elif custom_auth_type == 'DUMMY':
           c.JupyterHub.authenticator_class = 'illumideskdummyauthenticator.authenticator.IllumiDeskDummyAuthenticator'
           c.Authenticator.enable_auth_state = True
@@ -207,11 +202,9 @@ jupyterhub:
           # User name key returned by user
           c.GenericOAuthenticator.username_key = 'nickname'
 
-        if custom_auth_type == 'LTI13':
+        if custom_auth_type != 'AUTH0':
 
           c.Authenticator.post_auth_hook = setup_course_hook
-        elif custom_auth_type == 'LTI11':
-          c.Authenticator.post_auth_hook = setup_course_hook_lti11
 
           def userdata_hook(spawner, auth_state):
               if not auth_state:
@@ -225,6 +218,7 @@ jupyterhub:
           c.Spawner.auth_state_hook = userdata_hook
 
         c.Authenticator.enable_auth_state = True
+
         c.JupyterHub.db_url = 'postgresql://{user}:{password}@{host}:{port}/{db}'.format(
           user=os.environ.get('POSTGRES_JUPYTERHUB_USER'),
           password=os.environ.get('POSTGRES_JUPYTERHUB_PASSWORD'),
@@ -232,6 +226,8 @@ jupyterhub:
           port=os.environ.get('POSTGRES_JUPYTERHUB_PORT'),
           db=os.environ.get('POSTGRES_JUPYTERHUB_DB'),
         )
+        # Upgrade the database automatically on start
+        c.JupyterHub.upgrade_db = True
 
       illumideskSecurity: |
         c.JupyterHub.tornado_settings = {
