--- a/charts/cluster/templates/efs_csi_driver.yaml
+++ b/charts/cluster/templates/efs_csi_driver.yaml
@@ -123,7 +123,7 @@ metadata:
   name: efs-csi-controller
   namespace: kube-system
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: efs-csi-controller
@@ -145,7 +145,7 @@ spec:
         env:
         - name: CSI_ENDPOINT
           value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
-        image: {{.Values.efsCSIDriver.imageAddress }}.dkr.ecr.{{ .Values.efsCSIDriver.region }}.amazonaws.com/eks/aws-efs-csi-driver:v1.3.5
+        image: amazon/aws-efs-csi-driver:v1.3.6
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 5
@@ -174,7 +174,7 @@ spec:
         env:
         - name: ADDRESS
           value: /var/lib/csi/sockets/pluginproxy/csi.sock
-        image: {{.Values.efsCSIDriver.imageAddress }}.dkr.ecr.{{ .Values.efsCSIDriver.region }}.amazonaws.com/eks/csi-provisioner:v2.1.1
+        image: public.ecr.aws/eks-distro/kubernetes-csi/external-provisioner:v2.1.1-eks-1-18-2
         imagePullPolicy: IfNotPresent
         name: csi-provisioner
         volumeMounts:
@@ -183,7 +183,7 @@ spec:
       - args:
         - --csi-address=/csi/csi.sock
         - --health-port=9909
-        image: {{.Values.efsCSIDriver.imageAddress }}.dkr.ecr.{{ .Values.efsCSIDriver.region }}.amazonaws.com/eks/livenessprobe:v2.2.0
+        image: public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.2.0-eks-1-18-2
         imagePullPolicy: IfNotPresent
         name: liveness-probe
         volumeMounts:
@@ -235,7 +235,7 @@ spec:
         env:
         - name: CSI_ENDPOINT
           value: unix:/csi/csi.sock
-        image: {{.Values.efsCSIDriver.imageAddress }}.dkr.ecr.{{ .Values.efsCSIDriver.region }}.amazonaws.com/eks/aws-efs-csi-driver:v1.3.5
+        image: amazon/aws-efs-csi-driver:v1.3.6
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 5
@@ -277,7 +277,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        image: {{.Values.efsCSIDriver.imageAddress }}.dkr.ecr.{{ .Values.efsCSIDriver.region }}.amazonaws.com/eks/csi-node-driver-registrar:v2.1.0
+        image: public.ecr.aws/eks-distro/kubernetes-csi/node-driver-registrar:v2.1.0-eks-1-18-2
         imagePullPolicy: IfNotPresent
         name: csi-driver-registrar
         volumeMounts:
@@ -289,7 +289,7 @@ spec:
         - --csi-address=/csi/csi.sock
         - --health-port=9809
         - --v=2
-        image: {{.Values.efsCSIDriver.imageAddress }}.dkr.ecr.{{ .Values.efsCSIDriver.region }}.amazonaws.com/eks/livenessprobe:v2.2.0
+        image: public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.2.0-eks-1-18-2
         imagePullPolicy: IfNotPresent
         name: liveness-probe
         volumeMounts:
@@ -301,6 +301,8 @@ spec:
         beta.kubernetes.io/os: linux
       priorityClassName: system-node-critical
       serviceAccountName: efs-csi-node-sa
+      tolerations:
+      - operator: Exists
       volumes:
       - hostPath:
           path: /var/lib/kubelet
@@ -337,5 +339,6 @@ metadata:
   name: efs.csi.aws.com
 spec:
   attachRequired: false
+
 
 {{ end }}
